student reg: add, search and student list feature complete

--- a/4_Spring Form Data/src/main/webapp/WEB-INF/resources/css/style.css
+++ b/4_Spring Form Data/src/main/webapp/WEB-INF/resources/css/style.css
@@ -39,6 +39,12 @@ body{
 	padding: 5px 10px;
 }
 
+.display-block{
+  
+    display: inline-block;
+   
+}
+
 .input-right{
 	position: absolute;
 	right: 10px;
